--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "antd": "^3.19.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-mathjax": "^1.0.1"
+    "react-mathjax2": "^0.0.2"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
