--- a/package.json
+++ b/package.json
@@ -12,35 +12,21 @@
     "commitmsg": "commitlint -E GIT_PARAMS"
   },
   "dependencies": {
-    "antd": "^3.19.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-mathjax2": "^0.0.2"
+    "antd": "^4.17.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-mathjax2": "^0.0.2",
+    "umi": "^3.5.20"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@types/jest": "^23.3.12",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-test-renderer": "^16.0.3",
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-umi": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "react-test-renderer": "^16.7.0",
-    "tslint": "^5.12.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "umi": "^2.7.0",
-    "umi-plugin-gh-pages": "^0.1.0",
-    "umi-plugin-react": "^1.8.0",
-    "umi-types": "^0.2.0"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@umijs/preset-react": "1.x",
+    "@umijs/test": "^3.5.20",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.2.0",
+    "typescript": "^4.1.2",
+    "yorkie": "^2.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
