--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "dependencies": {
     "antd": "^4.17.2",
+    "monaco-editor": "^0.30.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-mathjax2": "^0.0.2",
-    "umi": "^3.5.20"
+    "umi": "^3.5.20",
+    "y-monaco": "^0.1.2",
+    "y-webrtc": "^10.2.2",
+    "yjs": "^13.5.22"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
